fix: center image alignment, update docs

--- a/frontend/src/components/Image/Image.css
+++ b/frontend/src/components/Image/Image.css
@@ -1,6 +1,8 @@
 .image-card {
   display: flex;
   flex-direction: column;
+  align-items: center;
+
   height: 100%;
   width: 100%;
 
